<resources>
    <string name="app_name">Retour</string>
    <string name="title_activity_maps">Retour</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="preference_file_key">ireteth.certh.gr.retour.preferences</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="traveler_settings">Traveler</string>
    <string name="register_settings">Register</string>
    <string name="provider_settings">Provider</string>
    <string name="project_settings">Retour on the Web</string>
    <string name="logout_settings">Log Out</string>
    <string name="login_info_text">Please login in order to post your own travel review</string>
    <string name="login_provider_info_text">Please login in order to post your travel/medical service</string>
    <string name="login_button_text">Login</string>
    <string name="submit_button_text">Submit</string>
    <string name="dismiss_button_text">Dismiss</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="filter_button_text">Filter</string>
    <string name="filter_text">Show me the best travel package based on the filters below:</string>
    <string name="loading_markers">Adding markers...</string>
    <string name="dropdown_service">Service</string>
    <string name="exit_app">Tap again the \"Back\" button to close the app</string>

    <string-array name="service_names">
        <item>Service Type</item>
        <item>Hospital</item>
        <item>Clinic</item>
        <item>Rehabilitation Center</item>
        <item>Hotel</item>
        <item>Airline</item>
        <item>Local transport (taxis,buses)</item>
        <item>Local entertainment (coffees etc)</item>
    </string-array>

</resources>
