<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/info_background_selector"
            android:padding="10dp">

            <TextView
                android:id="@+id/login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_info_text"
                android:textColor="#777777"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="50">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="25"
                android:text="@string/cancel_button_text"
                android:textAllCaps="false"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:padding="10dp"
                android:background="@drawable/mapbutton_selector"
                android:textColor="#666666"
                android:minHeight="0dp"
                android:minWidth="0dp"

                />
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="25"
                android:text="@string/login_button_text"
                android:textAllCaps="false"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:padding="10dp"
                android:background="@drawable/mapbutton_selector"
                android:textColor="#666666"
                android:minHeight="0dp"
                android:minWidth="0dp"

                />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>